# api/swagger.yaml
@@ -1,5 +1,145 @@
 basePath: /
 definitions:
+  accounts.Create:
+    properties:
+      account_type_id:
+        description: 帳戶類型ID
+        type: string
+      created_by:
+        description: 創建者
+        type: string
+      industry_id:
+        description: 帳戶行業ID
+        type: string
+      name:
+        description: 帳戶名稱
+        type: string
+      parent_account_id:
+        description: 帳戶父系帳戶ID
+        type: string
+      phone_number:
+        description: 帳戶電話
+        type: string
+    required:
+    - created_by
+    - name
+    type: object
+  accounts.List:
+    properties:
+      accounts:
+        description: 多筆
+        items:
+          properties:
+            account_id:
+              description: 帳戶ID
+              type: string
+            account_type_id:
+              description: 帳戶類型ID
+              type: string
+            created_at:
+              description: 創建時間
+              type: string
+            created_by:
+              description: 創建者
+              type: string
+            deleted_at:
+              description: 刪除時間
+              type: string
+            industry_id:
+              description: 帳戶行業ID
+              type: string
+            name:
+              description: 帳戶名稱
+              type: string
+            parent_account_id:
+              description: 帳戶父系帳戶ID
+              type: string
+            phone_number:
+              description: 帳戶電話
+              type: string
+            updated_at:
+              description: 更新時間
+              type: string
+            updated_by:
+              description: 更新者
+              type: string
+          type: object
+        type: array
+      limit:
+        description: 筆數(請從1開始帶入,最高上限20)
+        type: integer
+      page:
+        description: 頁數(請從1開始帶入)
+        type: integer
+      pages:
+        description: 總頁數
+        type: integer
+      total:
+        description: 總筆數
+        type: integer
+    required:
+    - limit
+    - page
+    type: object
+  accounts.Single:
+    properties:
+      account_id:
+        description: 帳戶ID
+        type: string
+      account_type_id:
+        description: 帳戶類型ID
+        type: string
+      created_at:
+        description: 創建時間
+        type: string
+      created_by:
+        description: 創建者
+        type: string
+      deleted_at:
+        description: 刪除時間
+        type: string
+      industry_id:
+        description: 帳戶行業ID
+        type: string
+      name:
+        description: 帳戶名稱
+        type: string
+      parent_account_id:
+        description: 帳戶父系帳戶ID
+        type: string
+      phone_number:
+        description: 帳戶電話
+        type: string
+      updated_at:
+        description: 更新時間
+        type: string
+      updated_by:
+        description: 更新者
+        type: string
+    type: object
+  accounts.Update:
+    properties:
+      account_type_id:
+        description: 帳戶類型ID
+        type: string
+      industry_id:
+        description: 帳戶行業ID
+        type: string
+      name:
+        description: 帳戶名稱
+        type: string
+      parent_account_id:
+        description: 帳戶父系帳戶ID
+        type: string
+      phone_number:
+        description: 帳戶電話
+        type: string
+      updated_by:
+        description: 更新者
+        type: string
+    required:
+    - updated_by
+    type: object
   code.ErrorMessage:
     properties:
       code:
@@ -542,6 +682,260 @@ info:
   title: CRM API
   version: "0.1"
 paths:
+  /authority/v1.0/accounts:
+    get:
+      consumes:
+      - application/json
+      description: 取得全部帳戶
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 目前頁數,請從1開始帶入
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 一次回傳比數,請從1開始帶入,最高上限20
+        in: query
+        name: limit
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  $ref: '#/definitions/accounts.List'
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 取得全部帳戶
+      tags:
+      - account
+    post:
+      consumes:
+      - application/json
+      description: 新增帳戶
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 新增帳戶
+        in: body
+        name: '*'
+        required: true
+        schema:
+          $ref: '#/definitions/accounts.Create'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  type: string
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 新增帳戶
+      tags:
+      - account
+  /authority/v1.0/accounts/{accountID}:
+    delete:
+      consumes:
+      - application/json
+      description: 刪除單一帳戶
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 帳戶ID
+        in: path
+        name: accountID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  type: string
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 刪除單一帳戶
+      tags:
+      - account
+    get:
+      consumes:
+      - application/json
+      description: 取得單一帳戶
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 帳戶ID
+        in: path
+        name: accountID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  $ref: '#/definitions/accounts.Single'
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 取得單一帳戶
+      tags:
+      - account
+    patch:
+      consumes:
+      - application/json
+      description: 更新單一帳戶
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 帳戶ID
+        in: path
+        name: accountID
+        required: true
+        type: string
+      - description: 更新帳戶
+        in: body
+        name: '*'
+        required: true
+        schema:
+          $ref: '#/definitions/accounts.Update'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  type: string
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 更新單一帳戶
+      tags:
+      - account
   /authority/v1.0/leads:
     get:
       consumes:
